rust_compiler/libs/integration_tests/src/snapshots/integration_tests__tests__algebraic_simplification.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
main:
move r8 5
mul r1 r8 1
move r9 r1

## Optimized Output

j 1
move r8 5
move r1 5
move r9 5
