rust_compiler/libs/integration_tests/src/snapshots/integration_tests__tests__constant_folding.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
main:
move r8 15

## Optimized Output

j 1
move r8 15
