rust_compiler/libs/integration_tests/src/snapshots/integration_tests__tests__leaf_function_no_stack_frame.snap
---
source: libs/integration_tests/src/lib.rs
expression: output
---
## Unoptimized Output

j main
increment:
pop r8
push sp
push ra
add r1 r8 1
move r8 r1
__internal_L1:
pop ra
pop sp
j ra

## Optimized Output

j main
pop r8
add r1 r8 1
move r8 r1
j ra
