rust_compiler/libs/integration_tests/src/snapshots/integration_tests__tests__simple_leaf_function.snap
---
source: libs/integration_tests/src/lib.rs
assertion_line: 60
expression: output
---
## Unoptimized Output

j main
test:
push sp
push ra
move r8 10
__internal_L1:
pop ra
pop sp
j ra

## Optimized Output

j main
push sp
push ra
move r8 10
pop ra
pop sp
j ra
